Updated discount for emails